--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -180,6 +180,9 @@ sort_order:
   archive: date-reverse # controlled by weight
   home: default # controlled by weight
 
+layout:
+  max_width: 1350px # the max width of the main content area
+
 ########################################
 # CSS
 ########################################
