--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -72,16 +72,6 @@ open_graph:
 # Content
 excerpt_link: Read More
 
-# Inject code snippet
-# Make sure your code snippet is safeHTML
-injector:
-  head_begin: # Inject code snippet right after <head>
-  head_end: # Inject code snippet right before </head>
-  body_begin: # Inject code snippet right after <body>
-  body_end: # Inject code snippet right before </body>
-  sidebar_begin: # Inject code snippet right after <aside>
-  sidebar_end: # Inject code snippet right before </aside>
-
 # Footer copyright
 # Inject code snippet right in the footer copyright
 # Make sure your code snippet is safeHTML
@@ -104,7 +94,12 @@ footer:
     mask: true # whether to use the images as a mask
 
 # Sidebar
-sidebar: right
+# sidebar: right # deprecated, use sidebar.position instead
+sidebar:
+  position: right
+  menu: true  # whether to show the sidebar menu button, ignored on mobile devices
+  article:
+    show_common: true # whether to show common sidebar, ignored on mobile devices
 
 social:
   # email: mailto:xxx@gmail.com
@@ -147,6 +142,7 @@ tagcloud_limits: 20
 
 # Archive behavior
 only_show_capsule_in_index: false # If you have hugo amounts of tags and categories, you can set this to true to only show the capsule in the index page for better performance
+uppercase_capsule: true # If you want to keep taxonomic capsule unchanged, please set this to false
 
 show_update_time: false # If you want to show the update time, please set this to true
 
@@ -154,11 +150,6 @@ show_update_time: false # If you want to show the update time, please set this t
 summary:
   enable: false
   style: 'subtitle' # 'subtitle' or 'blockquote'
-
-triangle_badge:
-  enable: false
-  icon: github # same as the icon in the social config
-  link: https://github.com/D-Sketon/hugo-theme-reimu
 
 # RSS output
 rss:
@@ -180,12 +171,22 @@ sort_order:
   archive: date-reverse # controlled by weight
   home: default # controlled by weight
 
-layout:
-  max_width: 1350px # the max width of the main content area
+# Pagination
+paginate:
+  archive: # Number of posts per page in archive and taxonomy pages
+  post: # Number of posts per page in home and other list pages
 
 ########################################
 # CSS
 ########################################
+
+layout:
+  max_width: 1350px # the max width of the main content area
+
+triangle_badge:
+  enable: false
+  icon: github # same as the icon in the social config
+  link: https://github.com/D-Sketon/hugo-theme-reimu
 
 anchor_icon: # default use '#' icon, you can use a hexadecimal representation of fontawesome or icon_font, like 'f0c1', you can also use false to hide anchor icon
 
@@ -262,6 +263,25 @@ code_block:
   # false means collapse all code blocks by default
   # number means collapse the code block by default when the number of lines exceeds the specified value
   expand: true
+
+# Clipboard configuration
+clipboard:
+  success: 
+    en: Copy successfully (*^▽^*)
+    zh-CN: 复制成功 (*^▽^*)
+    zh-TW: 複製成功 (*^▽^*)
+    ja: コピー成功 (*^▽^*)
+    pt-BR: Copiado com sucesso (*^▽^*)
+  fail: 
+    en: Copy failed (ﾟ⊿ﾟ)ﾂ
+    zh-CN: 复制失败 (ﾟ⊿ﾟ)ﾂ
+    zh-TW: 複製失敗 (ﾟ⊿ﾟ)ﾂ
+    ja: コピー失敗 (ﾟ⊿ﾟ)ﾂ
+    pt-BR: Falha ao copiar (ﾟ⊿ﾟ)ﾂ
+  copyright:
+    enable: false
+    count: 50 # The number of characters when the copyright is displayed
+    license_type: by-nc-sa # https://creativecommons.org/licenses
 
 math:
   katex:
@@ -486,25 +506,6 @@ article_copyright:
     license: true
     license_type: by-nc-sa # https://creativecommons.org/licenses
 
-# Clipboard configuration
-clipboard:
-  success: 
-    en: Copy successfully (*^▽^*)
-    zh-CN: 复制成功 (*^▽^*)
-    zh-TW: 複製成功 (*^▽^*)
-    ja: コピー成功 (*^▽^*)
-    pt-BR: Copiado com sucesso (*^▽^*)
-  fail: 
-    en: Copy failed (ﾟ⊿ﾟ)ﾂ
-    zh-CN: 复制失败 (ﾟ⊿ﾟ)ﾂ
-    zh-TW: 複製失敗 (ﾟ⊿ﾟ)ﾂ
-    ja: コピー失敗 (ﾟ⊿ﾟ)ﾂ
-    pt-BR: Falha ao copiar (ﾟ⊿ﾟ)ﾂ
-  copyright:
-    enable: false
-    count: 50 # The number of characters when the copyright is displayed
-    license_type: by-nc-sa # https://creativecommons.org/licenses
-
 # Back To Top
 top:
   enable: true
@@ -576,6 +577,16 @@ home_categories:
 ########################################
 # Experimental features
 ########################################
+
+# Inject code snippet
+# Make sure your code snippet is safeHTML
+injector:
+  head_begin: # Inject code snippet right after <head>
+  head_end: # Inject code snippet right before </head>
+  body_begin: # Inject code snippet right after <body>
+  body_end: # Inject code snippet right before </body>
+  sidebar_begin: # Inject code snippet right after <aside>
+  sidebar_end: # Inject code snippet right before </aside>
 
 # Experimental, may have a lot of bugs, open with caution!
 pjax:
